re PR rtl-optimization/22619 (Compilation failure for real_const_1.f and real_const_2.f90)

PR rtl-opt/22619
        * cfgcleanup.c (try_forward_edges): Watch out for end of
        insn chain.

From-SVN: r102537